# planningcenter-python

./: .gitignore  LICENSE  README.md  api_people.md  api_publishing.md  api_registrations.md  api_services.md  api_webhooks.md
planning-center-api/: README.md  hello.py  pyproject.toml  test_all.py
planning-center-api/examples/: advanced_usage.py  basic_usage.py  data_export.py  webhook_server.py
planning-center-api/planning_center_api/: __init__.py  auth.py  cli.py  client.py  config.py  exceptions.py  http_client.py  rate_limiter.py  utils.py  webhooks.py
planning-center-api/planning_center_api/models/: __init__.py  base.py  links.py  meta.py  relationships.py
planning-center-api/planning_center_api/products/: __init__.py  calendar.py  check_ins.py  giving.py  groups.py  organization.py  people.py  people_additional.py  publishing.py  registrations.py  services.py  webhooks.py
planning-center-api/tests/: __init__.py  conftest.py
planning-center-api/tests/integration/: __init__.py  test_full_api.py
planning-center-api/tests/unit/: __init__.py  test_client.py  test_models.py  test_organization.py  test_registrations.py  test_services.py  test_utils.py  test_webhooks.py
planning-center-mcp-server/: CLAUDE_DESKTOP_SETUP.md  COMPREHENSIVE_API_COVERAGE.md  EVENT_ATTENDEE_FILTERING.md  MOCK_SERVER.md  QUICKSTART.md  README.md  demo_mock_server.py  env.example  example_usage.py  hello.py  main.py  mcp_mock_server.py  mcp_mock_server_comprehensive.py  mcp_mock_server_fixed.py  mcp_mock_server_simple.py  mcp_server.py  mcp_server_fixed.py  minimal_working_mcp.py  pyproject.toml  run_comprehensive_server.bat  run_minimal_server.bat  run_mock_server.bat  run_mock_server.py  run_real_server.bat  run_server.py  test_comprehensive_server.py  test_connection.py  test_event_attendees.py  test_fixed_servers.py  test_mcp_servers.py  test_minimal_mcp.py  test_mock_server.py  test_server_manual.py  test_server_simple.py  test_simple_server.py
planning-center-mcp-server/planning_center_mcp/: __init__.py  client.py  config.py  mock_server.py  server.py
