[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planning-center-mcp-server"
version = "0.1.0"
description = "MCP server for Planning Center API wrapper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "fastapi-mcp>=0.4.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "mcp>=1.0.0",
    "planning-center-api @ file:///C:/Users/aksel/Documents/GitHub/planningcenter-wrapper/planning-center-api",
    "python-dotenv>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["planning_center_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
